koha-tmpl/opac-tmpl/prog/en/css/opac.css
/* ... */
.headerSortDown {
	background-image:url("../../images/desc.gif");
}

ul {
	list-style : disc;
	padding-left : 1em;
}

li {
	list-style : disc;
}

p.availability {
	font-size : 87%;
}

.available {
	color : #006600;
}

.waiting,.intransit,.notforloan,.checkedout,.lost,.notonhold {
	display : block;
}
.notforloan {
	color : #900;
}
.lost {
	color : #666;
}
.waiting {
	
}

/* "problem" enhancement */
.problem {
	color : white;
	background-color : red;
}

/* style for search terms in catalogsearch */
.term {
	/* color : blue; */
    color : #990000;
    background-color : #FFFFCC;
}

a .term {
	text-decoration : underline;
}

/* style for shelving location in catalogsearch */
.shelvingloc {
    display : block;
    font-style : italic;
}

.transfered {
	background-color : #F9FF9A;
}

/* action buttons */
#action {
	margin-top : .5em;
	background-color : #F3F3F3;
	border : 1px solid #E8E8E8;
	padding-bottom : 3px;
}

#action li {
	list-style : none;
	margin : .2em;
	padding : .3em 0;
}

#action a {
	background-position : 5px center;
	background-repeat : no-repeat;
	text-decoration : none;
	padding-left : 35px;
}

#action a.print {
	background-image:url(../../images/print.gif);
}

#action a#furthersearches {
	background : transparent url(../../images/menu-arrow.gif) no-repeat right center;
	border : 1px solid #F3F3F3;
	margin-left : 5px;
	padding : 2px 26px 2px 10px;
	text-decoration : none;
}

#action a#furthersearches:hover {
	border-top : 1px solid #FFF;
	border-left : 1px solid #FFF;
	border-right : 1px solid #979797;
	border-bottom : 1px solid #979797;
}

#action a.reserve,
.searchresults a.reserve {
	background-image:url(../../images/placereserve.gif);
}

#action a.addtoshelf, #toolbar a.addtoshelf {
	background-image:url(../../images/addtoshelf.gif);
}

#action a.addtocart, #toolbar a.addtocart {
	background-image:url(../../images/cart2.gif);
}

/* toolbar buttons */

#toolbar a,
#toolbar input {
	white-space : nowrap;
}

#toolbar ul {
	padding-left : 0;
}

#toolbar ul li {
	display : inline;
	list-style : none;
}

#toolbar ul li a {
	border-left : 1px solid #e8e8e8;
}

#toolbar ul li:first-child a {
	border-left : 0;
}


#toolbar a.print {
	background: transparent url(../../images/print-small.png) 5px 50% no-repeat;
	text-decoration : none;
	padding-left : 23px;
}

#toolbar a.brief {
	background: transparent url(../../images/brief.gif) 5px 50% no-repeat;
	text-decoration : none;
	padding-left : 23px;
}

#toolbar a.detail {
	background: transparent url(../../images/detail.gif) 5px 50% no-repeat;
	text-decoration : none;
	padding-left : 27px;
}

#toolbar a.download {
	background : transparent url("../../images/download.png") 7px 50% no-repeat;
	padding-left : 24px;
	text-decoration : none;
}

#toolbar a.editshelf {
	background : transparent url("../../images/shelf-edit.gif") 12px 50% no-repeat;
	padding-left : 26px;
	text-decoration : none;
}

#toolbar a.empty {
	background: transparent url(../../images/empty-small.png) 5px 50% no-repeat;
	text-decoration : none;
	padding-left : 21px;
}

#toolbar a.hide {
	background: transparent url(../../images/close.gif) 5px 50% no-repeat;
	text-decoration : none;
	padding-left : 26px;
}

#toolbar a.hold {
	background: transparent url(../../images/place-hold-small.png) 5px 50% no-repeat;
	text-decoration : none;
	padding-left : 23px;
}

#toolbar a.newshelf {
	background : transparent url("../../images/shelf-new.gif") 5px 50% no-repeat;
	padding-left : 23px;
	text-decoration : none;
}

#toolbar a.send,
a.send {
	background: transparent url(../../images/send.png) 2px 50% no-repeat;
	text-decoration : none;
	padding-left : 28px;
}

#toolbar a.new {
	background : transparent url("../../images/new.gif") 5px 50% no-repeat;
	padding-left : 23px;
	text-decoration : none;
}

#toolbar input.download {
	background : transparent url("../../images/download.png") 7px 50% no-repeat;
	border : 0;
	color : #006699;
	cursor : pointer;
	padding-left : 24px;
	text-decoration : none;
}

#toolbar input.editshelf,
input.editshelf {
	background : transparent url("../../images/shelf-edit.gif") 10px 50% no-repeat;
	border : 0;
	color : #006699;
	cursor : pointer;
	font-size : 100%;
	padding-left : 29px;
	text-decoration : none;
}

#toolbar input.newshelf {
	background : transparent url("../../images/shelf-new.gif") center left no-repeat;
	border : 0;
	color : #006699;
	cursor : pointer;
	font-size : 100%;
	margin: 0 0.5em;
	padding-left : 15px;
	text-decoration : none;
}

#toolbar input.deleteshelf,
input.deleteshelf {
	background : transparent url("../../images/shelf-delete.gif") 7px 50% no-repeat;
	border : 0;
	color : #006699;
	cursor : pointer;
	font-size : 100%;
	padding-left : 20px;
}

#toolbar input.deleteshelf:hover {
	color: #990033;
}


#toolbar input.editshelf:active,
input.editshelf:active,
#toolbar input.deleteshelf:active,
input.deleteshelf:active {
	border : 0;
}

#tagsel_span input.submit,
#tagsel_tag {
	background-image: url(../../images/tags-small.png);
	background-position : 7px center;
	background-repeat : no-repeat;
	padding-left : 25px;
	text-decoration: none;
}

#placehold input.submit:hover,
#tagsel_span input.submit:hover {
	color: #990033;
}

#addto {
	max-width : 10em;
}

.addto a.addtocart {
	background-image:url(../../images/cart2.gif);
	background-position : 9px -3px;
	background-repeat : no-repeat;
	text-decoration : none;
	padding-left : 33px;
}

#placehold input.submit {
	background-image:url(../../images/placereserve.gif);
	background-position : 9px center;
	background-repeat : no-repeat;
	text-decoration : none;
	padding-left : 23px;
}

#placehold input.submit,
#tagsel_span input.submit {
	border : 0;
	background-color: transparent;
	font-size : 100%;
	font-weight : bold;
	padding-left : 31px;
	color : #336699;
	cursor : pointer;
}
.searchresults a.highlight_toggle {
	background : transparent url(../../images/highlight.gif) -4px center no-repeat;
	display: none;
	font-weight: normal;
	padding : 0 10px 0 21px;
}
/* ... */

